--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
 
     signingConfigs {
         release {
-            storeFile file("release.keystore")
+            storeFile file("${rootProject.projectDir}/app/release.keystore")
             storePassword "123456"
             keyAlias "key0"
             keyPassword "123456"
@@ -59,6 +59,11 @@ android {
             excludes += "/META-INF/{AL2.0,LGPL2.1}"
             excludes += "/META-INF/versions/9/OSGI-INF/MANIFEST.MF"
         }
+    }
+
+    lint {
+        baseline = file("lint-baseline.xml")
+        abortOnError false
     }
 
     namespace 'com.gamegards.bigjackpot'
